k8s/orders-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service-nodeport
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: NodePort
