k8s/products-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: products
  ports:
    - port: 80
      targetPort: 8082
